# rgb-lib-wasm

./: .gitignore  Cargo.toml  DEV-ENVIRONMENT.md  README.md
.github/workflows/: README.md  ci.yml  release-dev.yml  release.yml
bindings/: README.md
bindings/wasm/: .gitignore  .wasm-pack.toml  BUILD_NOW.md  CHANGELOG.md  Cargo.toml  ONLINE_WASM.md  README.md  build-and-serve.sh  build.sh  patch-pkg-env.sh  serve.sh  setup-env.sh  setup-wasi.sh  test-build.sh  test-now.sh
bindings/wasm/examples/: backup.html  bitcoin.html  index.html  rgb.html  simple-test.html  wallet.html
bindings/wasm/examples/lib/: shared.js
bindings/wasm/noop-deps/: README-PATCHES.md  RUSTLS_WEBPKI_PATCH.md  prepare-async-io-1.13-patch.sh  prepare-async-io-patch.sh  prepare-bdk-core-patch.sh  prepare-reqwest-patch.sh  prepare-rustls-patch.sh  prepare-rustls-webpki-patch.sh  prepare-sqlx-core-patch.sh
bindings/wasm/noop-deps/async-io/: Cargo.toml
bindings/wasm/noop-deps/async-io-1.13/: Cargo.toml
bindings/wasm/noop-deps/async-io-1.13/src/: driver.rs  lib.rs  reactor.rs
bindings/wasm/noop-deps/async-io-patch/src/: time.rs
bindings/wasm/noop-deps/async-io/src/: driver.rs  lib.rs  reactor.rs
bindings/wasm/noop-deps/async-std/: Cargo.toml
bindings/wasm/noop-deps/async-std/src/: lib.rs  time.rs
bindings/wasm/noop-deps/async-std/src/stream/stream/: mod.rs
bindings/wasm/noop-deps/bdk_core/: Cargo.toml
bindings/wasm/noop-deps/errno/: Cargo.toml
bindings/wasm/noop-deps/errno/src/: lib.rs
bindings/wasm/noop-deps/home/: Cargo.toml
bindings/wasm/noop-deps/home/src/: lib.rs
bindings/wasm/noop-deps/polling/: Cargo.toml
bindings/wasm/noop-deps/polling/src/: lib.rs
bindings/wasm/noop-deps/reqwest/: Cargo.toml
bindings/wasm/noop-deps/reqwest/src/: cookie.rs  lib.rs
bindings/wasm/noop-deps/rustix/: Cargo.toml
bindings/wasm/noop-deps/rustix-0.37/: Cargo.toml
bindings/wasm/noop-deps/rustix-0.37/src/: lib.rs
bindings/wasm/noop-deps/rustix/src/: lib.rs
bindings/wasm/noop-deps/rustls/: Cargo.toml
bindings/wasm/noop-deps/rustls-pki-types/: Cargo.toml
bindings/wasm/noop-deps/rustls-pki-types/src/: lib.rs
bindings/wasm/noop-deps/rustls-webpki/src/subject_name/: ip_address.rs
bindings/wasm/noop-deps/rustls/src/msgs/: handshake.rs
bindings/wasm/noop-deps/rustls/src/webpki/: anchors.rs
bindings/wasm/noop-deps/socket2/: Cargo.toml
bindings/wasm/noop-deps/socket2/src/: lib.rs
bindings/wasm/noop-deps/sqlx-core/: Cargo.toml
bindings/wasm/noop-deps/sqlx-core/src/: lib.rs  logger.rs
bindings/wasm/noop-deps/sqlx-core/src/net/socket/: mod.rs
bindings/wasm/noop-deps/sqlx-core/src/pool/: connection.rs  inner.rs  mod.rs  options.rs
bindings/wasm/noop-deps/sqlx-core/src/rt/: mod.rs
bindings/wasm/src/: error.rs  keys.rs  lib.rs  utils.rs  wallet.rs  wallet_in_memory.rs
bindings/wasm/tests/: test_basic.rs
migration/: Cargo.toml
src/: error.rs  lib.rs  utils.rs
src/api/: mod.rs  proxy.rs  reject_list.rs
src/database/: enums.rs  memory_db.rs  mod.rs
src/wallet/: backup.rs  idb_store.rs  memory_store.rs  mod.rs  offline.rs  online.rs  rust_only.rs  vss.rs
tests/: compose.override.yml  docker-compose.ci.yml  integration_wasm.rs  keys_wasm.rs  persistence_wasm.rs  regtest.sh  wallet_wasm.rs
tests/regtest-helper/: Cargo.toml  Dockerfile
tests/regtest-helper/src/: main.rs
tests/utils/: mod.rs
tests/vss-server/: Dockerfile  nginx-cors.conf
