[package]
name = "rgb-lib"
version = "0.3.0-beta.4"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/RGB-Tools/rgb-lib"
homepage = "https://github.com/RGB-Tools/rgb-lib"
license = "MIT"
description = "RGB wallet library"
exclude = ["migration"]

[workspace]
members = [".", "migration", "bindings/wasm"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = [
    "std",
] }
bdk_wallet = { version = "=2.0.0", default-features = false, features = [
    "file_store",
    "keys-bip39",
    "std",
] }
bdk_electrum = { version = "0.23.0", optional = true, default-features = false, features = [
    "use-rustls",
] }
bdk_esplora = { version = "0.22.0", optional = true, default-features = false, features = [
    "blocking-https-rustls",
] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
    "stream",
] }
futures = { version = "0.3", default-features = false, features = [
    "executor",
] }
generic-array = "=0.14.7"  # temporary pin while waiting for chacha20poly1305 update
hex = { version = "0.4.3", default-features = false }
rand = { version = "0.9.1", default-features = false }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
] }
rgb-ops = { version = "=0.11.1-rc.7", optional = true, default-features = false, features = [
    "serde",
    "fs",
] }
rustls = { version = "0.23", optional = true, default-features = false }
scrypt = { version = "0.11.0", default-features = false, features = [
    "simple",
    "std",
] }
# Core / serde / logging (required by lib.rs and rest of crate)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
thiserror = { version = "2.0", default-features = false }
slog = { version = "2.7.0", default-features = false }
slog-async = { version = "2.8.0", default-features = false }
slog-term = { version = "2.9.1", default-features = false }
time = { version = "0.3.41", default-features = false }
tempfile = { version = "3.20.0", default-features = false }
file-format = { version = "0.27.0", default-features = false, features = ["reader"] }
typenum = { version = "1.18.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
zip = { version = "4.0.0", default-features = false, features = ["zstd"] }
# RGB-related (required by lib.rs; rgb-ops is optional for electrum/esplora)
amplify = { version = "=4.8.1", default-features = false }
rgb-invoicing = { version = "=0.11.1-rc.7", default-features = false }
# Library name in rgb-psbt-utils is "psrgbt"; use alias for consistent imports
psrgbt = { package = "rgb-psbt-utils", version = "=0.11.1-rc.7", default-features = false }
rgb-schemas = { version = "=0.11.1-rc.6", default-features = false }
rgb-strict-encoding = { version = "=1.0.0", default-features = false, features = ["bitcoin"] }
rgb-strict-types = { version = "=1.0.0", default-features = false }
strict_encoding = { version = "2.8", default-features = false }
commit_verify = { version = "0.11.1-alpha.2", default-features = false }
bp-core = { version = "0.11.1-alpha.2", default-features = false }
bp-seals = { version = "0.11.1-alpha.2", default-features = false }
bp-invoice = { version = "0.11.1-alpha.2", default-features = false }
# Use different runtime for WASM vs native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rgb-lib-migration = { path = "migration", version = "0.3.0-beta.2" }
sea-orm = { version = "1.1.12", default-features = false, features = [
    "macros",
    "runtime-async-std-rustls",
    "sqlx-sqlite",
    "with-json",
] }

# For WASM: use runtime-async-std so sqlx-core pool can spawn (we patched async-io/Instant for wasm32).
# Use bundled SQLite to avoid libsqlite3-sys dependency.
[target.'cfg(target_arch = "wasm32")'.dependencies]
rgb-lib-migration = { path = "migration", version = "0.3.0-beta.2", default-features = false }
sea-orm = { version = "1.1.12", default-features = false, features = [
    "macros",
    "sqlx-sqlite",
    "with-json",
    "runtime-async-std-rustls",  # sqlx-core needs _rt-async-std for pool spawn/sleep/timeout
] }
# Add sqlx-sqlite with bundled feature for WASM to avoid libsqlite3-sys
# Note: sqlx runtime is not needed for WASM, sea-orm will handle it
sqlx-sqlite = { version = "0.8", default-features = false, features = [
    "bundled",  # Bundled SQLite for WASM (avoids libsqlite3-sys)
] }
sea-query = "0.32.6"
# bdk_core for MemoryStore (in-memory BDK store when target_arch = wasm32)
bdk_core = { version = "0.6" }
# Polyfill for std::time::Instant on WASM (used by sqlx/async-io); may be picked up by deps
instant = { version = "0.1", features = ["wasm-bindgen"] }
# Esplora for WASM (async-https + reqwest wasm, no rustls/ring)
bdk_esplora = { version = "0.22.0", optional = true, default-features = false, features = ["async-https"] }
# Direct dep so build_async_with_sleeper exists; we use WasmSleeper (DefaultSleeper uses std::time on wasm).
esplora-client = { version = "0.12", optional = true, default-features = false, features = ["async-https"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }
bp-esplora = { version = "=0.11.1-alpha.2", optional = true, default-features = false }
# Wall-clock time on WASM (OffsetDateTime::now_utc() uses std::time and panics)
js-sys = "0.3"
# time crate with wasm-bindgen so OffsetDateTime::now_utc() works in browser (used by deps)
time = { version = "0.3.41", default-features = false, features = ["wasm-bindgen"] }
# HTTP via fetch for WASM (replaces minreq in Esplora validation; see utils::esplora_wasm)
gloo-net = { version = "0.6", default-features = false, features = ["http"] }

[dev-dependencies]
copy_dir = { version = "0.1.3", default-features = false }
dircmp = { version = "0.2.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
regex = { version = "1.11.1", default-features = false }
serial_test = { version = "3.2.0", default-features = false }

[features]
default = ["electrum"]
all = ["electrum", "esplora"]
electrum = [
    "bdk_electrum",
    "reqwest",
    "rgb-ops/electrum_blocking",
    "rustls",
]
esplora = [
    "bdk_esplora",
    "bp-esplora",
    "reqwest",
    "rgb-ops/esplora_blocking",
    "rustls",
]
# Esplora for WASM: async-https + reqwest wasm (no rustls/ring in wasm32)
esplora-wasm = [
    "bdk_esplora",
    "bp-esplora",
    "esplora-client",
    "reqwest",
    "rgb-ops/esplora_blocking",
]
# Electrum for WASM: target transport is WebSocket (wss://), not TCP.
# Currently same deps as electrum; for pure wss:// need transport over
# electrum_streaming_client or proxy (browser → wss → proxy → TCP Electrum).
electrum-wasm = [
    "bdk_electrum",
    "reqwest",
    "rgb-ops/electrum_blocking",
    "rustls",
]
camel_case = ["default"]

[profile.reldebug]
inherits = "release"
debug = 1

# Patch dependencies for WASM (target web / wasm32-unknown-unknown).
# No-op/patched crates for errno, socket2, rustix, rustls, async-io, bdk_core, etc.
[patch.crates-io]
errno = { path = "bindings/wasm/noop-deps/errno", version = "0.3.14" }
polling = { path = "bindings/wasm/noop-deps/polling", version = "2.8.0" }
rustix = { path = "bindings/wasm/noop-deps/rustix-0.37", version = "0.37.28" }
rustls-pki-types = { path = "bindings/wasm/noop-deps/rustls-pki-types", version = "1.14.0" }
home = { path = "bindings/wasm/noop-deps/home", version = "0.5.11" }
socket2 = { path = "bindings/wasm/noop-deps/socket2", version = "0.4.10" }
rustls-webpki = { path = "bindings/wasm/noop-deps/rustls-webpki", version = "0.103.8" }
rustls = { path = "bindings/wasm/noop-deps/rustls", version = "0.23" }
async-io = { path = "bindings/wasm/noop-deps/async-io", version = "2.6.0" }
sqlx-core = { path = "bindings/wasm/noop-deps/sqlx-core", version = "0.8.6" }
async-std = { path = "bindings/wasm/noop-deps/async-std", version = "1.13.0" }
reqwest = { path = "bindings/wasm/noop-deps/reqwest", version = "0.12.24" }
bdk_core = { path = "bindings/wasm/noop-deps/bdk_core", version = "0.6.2" }
