[package]
name = "rustix"
version = "0.37.28"
edition = "2021"
description = "No-op replacement for rustix crate in WASM"
license = "Apache-2.0 OR MIT"

[lib]
name = "rustix"
path = "src/lib.rs"

[features]
default = ["std", "fs"]
std = []
use-libc = []
fs = []
time = []
process = []
thread = []

[workspace]
